fixed profile overflow, form suggestion to light-grey, scroll-bar no longer appears in home, body now has background-color black to avoid white when scrolling, moved gonzo post to first and laura to last so in gonzo profile we see her for the first time

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -88,3 +88,11 @@
 .show-content-container{
   padding-bottom: 0;
 }
+.followed-users-container{
+  height: 51vh;
+  overflow-y: scroll;
+}
+.followed-users-container::-webkit-scrollbar {
+  display: none;
+  overflow: hidden;
+}
